--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
         <h1 class="title"> <i> The Life of a Student </i></h1>            
         <div class="main">
-            <h2> Hello Welcome To My Website! I'm Tara, a seventh grader going to middle school. I want be a software engineeer, but it takes a whole lot of school before that 
+            <h2> Hello Welcome To My Website! I'm Tara, a seventh grader going to middle school. I want to be a software engineeer, but it takes a whole lot of school before that 
             comes. So what should I do while I wait? STUDY! :) </h2>
 
             <h2 style="text-decoration: underline; color:rgb(121, 64, 121)"> Getting Started</h3>
@@ -82,6 +82,8 @@
                 Planners are customizable and can be changed to your liking! There's no correct way to use it, but some people might get carried away decorating it, than actually considering its purpose. A planner is designed to help you keep track of your daily activities, goals, or homework. You should keep that in mind when writing in your planner!</p> 
                 
             <p> Supplies: I recommend buying colorful pens and tabs for your planner! Tabs can be used to mark months or holidays, they make finding things easier and faster! Talking about finding things, colorful pens can make words stand out just like a highlighter! Each pen could mean something different. For example, red pens could mean something important, and blue pens can mean long-term assignments! </p>
+
+            <h1 "text-decoration: underline; color:rgb(121, 64, 121)"> School Supplies</h1>
         </div>
     </body>
 </html>
