--- a/tips.html
+++ b/tips.html
@@ -69,6 +69,7 @@
         </ul>
         <h1 class="title"> <i> The Life of a Student </i></h1>            
         <div class="main">
+            <h1 Tips </h2>
             
         </div>
     </body>
