edited para for 3

--- a/tips.html
+++ b/tips.html
@@ -72,7 +72,7 @@
             <h2 style="text-decoration: underline; color:rgb(121, 64, 121)"> Tips </h2>
             <p> 1. In class you should always have a pencil in hand in case the teacher says something noteworthy! Unless you are some mind reading genius writing down notes might help you remember things easier.</p>
             <p> 2. Learning how to write: In your planner never write things like study for exam. If you take a look at it later it will seem like too much work and you won't know where to start. Instead of writing a broad topic write something like: study unit 1 on Wednesday and study unit 2 on Thursday. Make sure to spread things out! </p>
-            <p> 3. Using your class time to your advantage: Usually there's always extra periods that allow you to go and visit your teachers. Even if you have amazing grades there is always something you could do that could be benificial later on. For example: going to their classroom to review what you learned in class/asking for extra practice sheets </p>
+            <p> 3. Using your class time to your advantage: Usually there's always extra periods that allow you to go and visit your teachers. Even if you have amazing grades there is always something you could be doing that might be benificial later on. For example: going to their classroom to review what you learned in class/asking for extra practice sheets </p>
             
             <html lang="en">
 
