--- a/tips.html
+++ b/tips.html
@@ -73,7 +73,7 @@
             <p> 1. In class you should always have a pencil in hand in case the teacher says something noteworthy! Unless you are some mind reading genius writing down notes might help you remember things easier.</p>
             <p> 2. Learning how to write: In your planner never write things like study for exam. If you take a look at it later it will seem like too much work and you won't know where to start. Instead of writing a broad topic write something like: study unit 1 on Wednesday and study unit 2 on Thursday. Make sure to spread things out! </p>
             <p> 3. Using your class time to your advantage: Usually there's always extra periods that allow you to go and visit your teachers. Even if you have amazing grades there is always something you could be doing that might be benificial later on. For example: going to their classroom to review what you learned in class/asking for extra practice sheets </p>
-            
+            <p> 4. Make friends: You are bound to be absent one day so making a a homework buddy in every class and sharing numbers can help you stay updated on what's happening in class while you are away. They can also be helpful when there's a problem you don't understand! Just make sure that you pick the right person with good grades, if not their bad qualities might rub off on you! Finding the right group of people to hang out with is a part of the key to success!</p>
             <html lang="en">
 
             <head>
